# vlc-controller

./: LICENSE  README.md  index.html  package.json  vite.config.ts  vlc-controller.code-workspace
.github/workflows/: publish.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vlc.rs  window.rs
src/components/vlc/Interface/: _Interfaces.ts  index.ts
src/components/vlc/components/: _Controller.tsx  _VlcController.tsx  _Window.tsx  index.ts
src/components/vlc/function/: _channel.ts  _select.ts  _status.ts  _stop.ts  _vlc.ts  _volume.ts  index.ts
src/components/vlc/function/abc/: _get.ts  _request.ts  index.ts
src/components/window/: _changeByCombobox.ts  _close.ts  index.ts
src/lib/utils/: _next.ts  index.ts
